Minor fix to Cards gap

--- a/assets/scss/_cards.scss
+++ b/assets/scss/_cards.scss
@@ -267,7 +267,7 @@ body {
     justify-content: space-evenly;
     align-items: flex-start;
     align-content: flex-start;
-    padding-top: $_int-24;
+    // padding-top: $_int-24;
     padding-right: 0;
     padding-bottom: 0;
     padding-left: 0;
